fix sections stretching across the whole height of main

--- a/src/styles/components/section.css
+++ b/src/styles/components/section.css
@@ -1,6 +1,7 @@
 body > main {
     display: flex;
     flex-wrap: wrap;
+    align-content: flex-start;
 
     > * {
         flex: 100%;
